--- a/xdebug.ini
+++ b/xdebug.ini
@@ -5,6 +5,6 @@ xdebug.remote_autostart=1
 xdebug.remote_host=host.docker.internal
 xdebug.remote_port=9000
 xdebug.remote_handler=dbgp
-xdebug.idekey=paydayloan
+xdebug.idekey=vinceyi
 xdebug.collect_params=4
 xdebug.start_with_request=yes
